--- a/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
@@ -57,7 +57,7 @@
                             <td class="text-color " *ngIf="!scrapIds">
                                 <label class="m-0">{{packet.controls.ornamentsName.value | uppercase  }}</label>
                             </td>
-                            <td class="text-gray" *ngIf="url != 'view-loan'">
+                            <td class="text-gray text-center" *ngIf="url != 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/cancel.png" alt="" height="15"
                                     (click)="removeSelectedPacketsData(idx)">
                             </td>
