--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -75,7 +75,8 @@
                     <mat-tab label="Upload Documents"
                         *ngIf="loanStage?.id == 8 || loanStage?.id == 7 || loanStage?.id == 4 || url == 'view-loan'">
                         <kt-upload-documents [masterAndLoanIds]="masterAndLoanIds" (next)="next($event)"
-                            [loanDocumnets]="customerDetail" [showButton]="showButton"></kt-upload-documents>
+                            [loanDocumnets]="customerDetail" [showButton]="showButton" [showLoanFlag]="true">
+                        </kt-upload-documents>
                     </mat-tab>
 
                     <mat-tab label="Loan Status Approval"
