--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -122,9 +122,9 @@
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let lead">
                         <ng-container *ngIf="lead.status.id == '1'">
-                            <div [ngStyle]="{'display': 'inherit'}">
-                                <button (click)="false" class="apply-kyc" style="cursor: not-allowed"
-                                    *ngxPermissionsOnly="['assignAppraiserEdit']">Assign Appraiser</button>
+                            <div [ngStyle]="{'display': 'inherit'}" *ngxPermissionsOnly="['assignAppraiserEdit']">
+                                <button (click)="assign(lead)" *ngIf="!lead?.customerAssignAppraiser" class="apply-kyc">Assign Appraiser</button>
+                                <button (click)="updateAppraiser(lead)"  *ngIf="lead?.customerAssignAppraiser" class="apply-kyc">Update Appraiser</button>
                             </div>
                         </ng-container>
 
