--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -1,6 +1,6 @@
 <kt-portlet>
     <kt-portlet-body>
-        <div class="main">
+        <div class="main" id="container">
             <div class="row kt-padding-t-5 kt-margin-b-5">
                 <div class="col font-weight-500">Customer ID</div>
                 <div class="col font-weight-500">Loan ID</div>
