--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
@@ -37,7 +37,7 @@
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
                         <button class="apply-kyc"
-                            *ngIf="!loan?.isLoanSubmitted && loan?.loanTransfer?.loanTransferCurrentStage == '6' && permission.loanApplicationAdd"
+                            *ngIf="!loan?.isLoanSubmitted && loan?.loanTransfer?.loanTransferCurrentStage == '6' && permission.loanApplicationAdd && !loan.loanStatusForAppraiser"
                             (click)="applyLoan(loan)">Apply Loan</button></mat-cell>
                 </ng-container>
 
