--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -13,7 +13,7 @@
                             [showButton]="showButton" [loanTransfer]="laonTransferDetails" (next)="next($event)">
                         </kt-upload-loan-documents>
                     </mat-tab>
-                    <mat-tab label="Loan Trasnfer Approval" [formGroup]="approvalForm" [disabled]="disabled[2]">
+                    <mat-tab label="Loan Transfer Approval" [formGroup]="approvalForm" [disabled]="disabled[2]">
                         <!-- <div *ngIf="loanTransferStage == '3' || loanTransferStage == '4' || loanTransferStage == '5'">
                             <div class="row justify-content-center">
                                 <div class="col-6">
