--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -130,8 +130,8 @@
                                 <label class="mandatory kt-padding-l-10">Upload Passbook / Bank Statement / Cancel
                                     Cheque</label>
                             </div>
-                            <div class="col-6">
-                                <div class="input-group mb-3">
+                            <div class="col-6 mb-3">
+                                <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Select File"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
                                         formControlName="passbookProofImageName" />
@@ -142,10 +142,10 @@
                                     </div>
                                     <input type="file" class="d-none" accept="image/png, image/jpeg" #passbook
                                         (input)="getFileInfo($event)">
+                                    <mat-error *ngIf="controls.passbookProof.touched && controls.passbookProof.invalid">
+                                        Required field
+                                    </mat-error>
                                 </div>
-                                <mat-error *ngIf="controls.passbookProof.touched && controls.passbookProof.invalid">
-                                    Required field
-                                </mat-error>
                             </div>
                         </div>
                         <div class="row kt-margin-b-20">
