--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -144,7 +144,7 @@
                             <mat-menu #menu="matMenu" xPosition="before">
                                 <button mat-menu-item (click)="applyLoan(role)">Apply Loan</button>
                                 <button mat-menu-item (click)="transferLoan(role)">Transfer Loan</button>
-                                <button mat-menu-item (click)="applyScrapBuy(role)">Apply Scrap Buy</button>
+                                <button mat-menu-item (click)="applyScrapBuy(role)">Apply Scrap</button>
                             </mat-menu>
                         </ng-container>
                         <!-- <div ngbDropdown class="dropdown dropdown-inline" #customerActionDropdown1="ngbDropdown"
