--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -789,8 +789,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-3 offset-1 form-label">
-                                <label class=""
-                                    *ngIf="data.customerKycReview.customerKycPersonal.signatureProofImg">Signature</label>
+                                <label>Signature</label>
                             </div>
                             <div class="col-7">
                                 <div class="input-group mb-3" *ngIf="viewOnly">
