--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-address/user-address.component.html
@@ -300,8 +300,8 @@
                                                 <label class="mandatory  font-weight-500 text-color">Attach
                                                     Proof</label>
                                             </div>
-                                            <div class="col-7" *ngIf="i==0">
-                                                <div class="input-group mb-3">
+                                            <div class="col-7 mb-3" *ngIf="i==0">
+                                                <div class="input-group">
                                                     <input type="text" class="form-control" placeholder="Select"
                                                         aria-label="Recipient's username"
                                                         aria-describedby="basic-addon2" readonly
@@ -315,6 +315,10 @@
                                                             style="border-top-right-radius: 9px !important; border-bottom-right-radius: 9px !important;">Attach</span>
                                                     </div>
                                                 </div>
+                                                <mat-error
+                                                    *ngIf="addressForm.controls.addressProofFileName.errors?.required && addressForm.controls.addressProofFileName.touched">
+                                                    Required field
+                                                </mat-error>
                                                 <label class="mandatory  file d-none">
                                                     <input type="file" accept="image/png, image/jpeg" id="file"
                                                         aria-label="File browser example" #permanent
@@ -323,8 +327,8 @@
                                                 </label>
                                             </div>
 
-                                            <div class="col-7" *ngIf="i==1">
-                                                <div class="input-group mb-3">
+                                            <div class="col-7 mb-3" *ngIf="i==1">
+                                                <div class="input-group">
                                                     <input type="text" class="form-control" placeholder="Select"
                                                         aria-label="Recipient's username"
                                                         aria-describedby="basic-addon2" readonly
@@ -339,6 +343,10 @@
                                                             style="border-top-right-radius: 9px !important; border-bottom-right-radius: 9px !important;">Attach</span>
                                                     </div>
                                                 </div>
+                                                <mat-error
+                                                    *ngIf="addressForm.controls.addressProofFileName.errors?.required && addressForm.controls.addressProofFileName.touched">
+                                                    Required field
+                                                </mat-error>
                                                 <label class="mandatory  file d-none">
                                                     <input type="file" accept="image/png, image/jpeg" id="file"
                                                         aria-label="File browser example" #residential
