--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -213,7 +213,7 @@
                             <div
                                 *ngIf="loanTransferStage == '3' || loanTransferStage == '4' || loanTransferStage == '5'">
                                 <div class="row justify-content-center "
-                                    *ngIf="approvalForm.controls.loanTransferStatusForAppraiser.value != 'approved'">
+                                    *ngIf="approvalForm.controls.loanTransferStatusForAppraiser.value && approvalForm.controls.loanTransferStatusForAppraiser.value != 'approved'">
                                     <div class="col-7">
                                         <div class="row">
                                             <div class="col-4">
