--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
@@ -4,7 +4,7 @@
     }
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 135% !important;
+        width: 148% !important;
     }
     .mat-column-fullName{
         flex: 0 0 11% !important;
@@ -17,13 +17,13 @@
         flex: 0 0 7% !important;
     }
     .mat-column-internalBranch{
-        flex: 0 0 10% !important;
+        flex: 0 0 7% !important;
     }
     .mat-column-state{
         flex: 0 0 9% !important;
     }
     .mat-column-city{
-        flex: 0 0 9% !important;
+        flex: 0 0 7% !important;
     }
     .mat-column-pincode{
         flex: 0 0 6% !important;
@@ -48,6 +48,10 @@
     }
     .mat-column-actions{
         flex: 0 0 6% !important;
+
+    }
+    .mat-column-menu{
+        flex: 0 0 3% !important;
 
     }
     .apply-kyc {
